docs: update DEVELOPER_ENVIRONMENT.md
